--- a/TODO.txt
+++ b/TODO.txt
@@ -2,7 +2,7 @@ TODO:
     - Implement removeNode function that removes a specific node 
 
 COMPLETED:
-    - Refactor as header
+    - Refactor as class
     - Fix memory leaks
     - Implement delete entire list function
     - Implement append node function
